# kasparro-agentic-yaswanth-kuramdasu

./: .env.example  .gitignore  README.md  app.py  config.py  fixtures.py  models.py  pyproject.toml  requirements.txt  utils.py
agents/: __init__.py  comparison_agent.py  faq_agent.py  output_agent.py  parser_agent.py  product_page_agent.py  question_generator_agent.py
docs/: projectdocumentation.md
logic_blocks/: __init__.py  benefits_block.py  comparison_blocks.py  cross_block_analyzer.py  ingredients_block.py  safety_block.py  usage_block.py
orchestrator/: __init__.py  state.py  workflow.py
output/: .gitkeep  comparison_page.json  faq.json  preview.html  product_page.json
services/: __init__.py  html_generator.py
templates/: __init__.py  base_template.py  comparison_template.py  faq_template.py  product_template.py
tests/: conftest.py  test_assignment_requirements.py  test_workflow.py  test_workflow_resilience.py
tests/test_agents/: __init__.py  test_comparison_agent.py  test_faq_agent.py  test_faq_selection.py  test_parser_agent.py
